k8s/koiner/base/tools/koiner-checker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: koiner-checker
  name: koiner-checker
  namespace: koiner-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      service: koiner-checker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: koiner-checker
    spec:
      containers:
        - name: koiner-checker
          image: elimbatido/koiner-checker:v0.4.2
          ports:
            - containerPort: 3201
          readinessProbe:
            tcpSocket:
              port: 3201
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3201
          imagePullPolicy: Always
      serviceAccountName: default
