k8s/koiner/base/tools/koiner-checker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: koiner-checker
  name: koiner-checker
  namespace: koiner-tools
spec:
  ports:
    - name: "8000"
      protocol: TCP
      port: 8000
      targetPort: 3201
  selector:
    service: koiner-checker
