k8s/koiner/base/tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koiner-tools-ingress
  namespace: koiner-tools
  annotations:
    cert-manager.io/cluster-issuer: "cert-manager-webhook-dnsimple-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - checker.koiner.app
      secretName: koiner-checker-tls
  rules:
    - host: checker.koiner.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: koiner-checker
                port:
                  number: 3201
